[BUG #7710] tab alignment demo

--- a/application/websitewidgetbrowser/styles.css
+++ b/application/websitewidgetbrowser/styles.css
@@ -28,3 +28,8 @@
   vertical-align: middle;
   line-height: 1.2;
 }
+
+
+.demo-options {
+  margin: 10px;
+}
